# jarvis-agent

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
config/: default.toml
src/: agent.rs  conf.rs  context.rs  encoding.rs  erring.rs  main.rs
tests/: README.md  ca.crt  ca.key  client.pem  client.rs  jarvis.agent.crt  jarvis.agent.key  jarvis.crt  jarvis.key
