[package]
name = "jarvis-agent"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
description = ""
publish = false
repository = "https://github.com/yiwen-ai/jarvis-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
axum = { version = "0.6.*", features = [
  "headers",
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
bytes = "1.4.*"
config = "0.13.*"
futures-util = "0.3.*"
hyper = "0.14.*"
libflate = "1.4.*"
log = "0.4.*"
reqwest = { version = "0.11.*", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "stream",
  "trust-dns",
], default-features = false }
rustls-pemfile = "1.0.*"
serde = "1.0.*"
serde_json = "1.0.*"
structured-logger = "1.0.*"
tokio = { version = "1.28.*", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
], default-features = true }
tokio-rustls = "0.24.*"
tower = "0.4.*"
tower-http = { version = "0.4.*", features = [
  "catch-panic",
  "compression-gzip",
  "compression-zstd",
  "decompression-gzip",
  "decompression-zstd",
  "propagate-header",
] }
zstd = "0.12.*"

[profile.release]
lto = true
